# CPU-Simulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: ISA.md  README.md  architecture.md  milestones.md  project_overview.md
examples/: README.md  milestone1.asm  milestone2_arithmetic.asm  milestone2_cmp_equal.asm  milestone2_cmp_less.asm  milestone2_countdown.asm  milestone2_jmp_skip.asm  milestone2_loop_sum.asm  milestone3_memory_preview.asm  milestone3_push_preview.asm  milestone3_stack_preview.asm
include/assembler/: Assembler.hpp
include/cpu/: CPU.hpp
include/isa/: Instruction.hpp
include/memory/: Memory.hpp
src/: main.cpp
src/assembler/: Assembler.cpp
src/cpu/: CPU.cpp
src/isa/: Instruction.cpp
src/memory/: Memory.cpp
tests/: cpu_tests.cpp  milestone1_tests.cpp  milestone2_tests.cpp  milestone3_tests.cpp  milestone4_tests.cpp
